# logictensornetworks

./: .gitignore  LICENSE  README.md  __init__.py  logictensornetworks.py  logictensornetworks_library.py  logictensornetworks_wrapper.py  pyproject.toml  requirements-examples.txt  requirements.txt  setup.py
examples/: README.md
examples/binary_classification/: binary_classification.ipynb  binary_classification.py  commons.py
examples_ltn/: clustering.py  multilabel_classifier_simple.py  regression_linear.py  semantic_mnist_pairs.py  smokes_friends_cancer.py  spatial_relations.py  test_proporitions.py
examples_ltnw/: binary_classifier.py  clustering.py  clustering_euclidian_distance.py  multilabel_classification.py  multilabel_classification_axiomatized.py  regression_linear.py  relations.py  smokes_friends_cancer.py  spatial_relations.py  spatial_relations_data.py
logictensornetworks/: __init__.py  core.py  fuzzy_ops.py  utils.py
ltn/: __init__.py  core.py  fuzzy_ops.py  utils.py
test/: test_core.py  test_parser.py
tests/: _all.py  library.py  test_examples_ltn.py  test_examples_ltnw.py  wrapper.py
tutorials/: 1-grounding_non_logical_symbols.ipynb  2-grounding_connectives.ipynb  2b-operators_and_gradients.ipynb  3-knowledgebase_and_learning.ipynb  4-reasoning.ipynb  README.md  binary_classification.ipynb  clustering.ipynb  clustering_euclidian.ipynb  grounding.ipynb  grounding_and_learning.ipynb  multilabel_classification.ipynb  multilabel_classification_axiomatized.ipynb  regression_linear.ipynb  relations.ipynb  smokes_friends_cancer.ipynb
(+43 files in other folders)
