[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ltn"
version = "2.1"
authors = [
  {name="Samy Badreddine", email="badreddine.samy@gmail.com"},
]
description = "Logic Tensor Networks"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]
keywords=["machine-learning","framework","neural-symbolic-computing","fuzzy-logic","tensorflow"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/logictensornetworks/logictensornetworks"
"Issue Tracker" = "https://github.com/logictensornetworks/logictensornetworks/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.examples = {file = ["requirements-examples.txt"]}

[tool.setuptools.packages.find]
include = ["ltn"]